--- a/bootstrap/css/styles.css
+++ b/bootstrap/css/styles.css
@@ -40,3 +40,18 @@ footer {
     background-image: linear-gradient(#b7a8f8, white);
     padding: 20px 0px;
 }
+
+.tab-content {
+    border: 1px solid #DDD;
+    border-top: none;
+    padding: 10px;
+}
+
+.navbar-text {
+    cursor: pointer;
+}
+
+.carousel-caption {
+    background-color: rgba(0,0,0,.5);
+    border-radius: .25rem;
+}
