--- a/bootstrap/css/styles.css
+++ b/bootstrap/css/styles.css
@@ -1,57 +1,59 @@
 body {
-    font-family: "Open Sans", sans-serif;
-}
+  font-family: "Open Sans", sans-serif; }
 
 h1, h2, h3 {
-    font-family: "Lobster", cursive;
-}
+  font-family: "Lobster", cursive; }
 
 h2 {
-    color: #3046C5;
-}
+  color: #3046C5; }
 
 header h2 {
-    color: #CEC8FF;
-}
+  color: #CEC8FF; }
 
 footer {
-    background-image: linear-gradient(#CEC8FF, white);
-    padding: 20px 0;
-}
+  background-image: linear-gradient(#CEC8FF, white);
+  padding: 20px 0; }
 
 .jumbotron {
-    margin: 0;
-    padding: 30px;
-    background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
-    color: white;
-}
+  margin: 0;
+  padding: 30px;
+  background-image: linear-gradient(to right, #5637dd, #3046C5, #60106b);
+  color: white; }
 
 .row-content {
-    padding: 50px 0;
-    border-bottom: 1px ridge;
-    min-height: 200px;
-}
+  padding: 50px 0;
+  border-bottom: 1px ridge;
+  min-height: 200px; }
 
 .navbar {
-    background-color: #901CAD;
-}
+  background-color: #901CAD; }
 
-.site-footer{
-    background-image: linear-gradient(#b7a8f8, white);
-    padding: 20px 0px;
-}
+.site-footer {
+  background-image: linear-gradient(#b7a8f8, white);
+  padding: 20px 0px; }
 
 .tab-content {
-    border: 1px solid #DDD;
-    border-top: none;
-    padding: 10px;
-}
+  border: 1px solid #DDD;
+  border-top: none;
+  padding: 10px; }
 
 .navbar-text {
-    cursor: pointer;
-}
+  cursor: pointer; }
 
 .carousel-caption {
-    background-color: rgba(0,0,0,.5);
-    border-radius: .25rem;
-}
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: .25rem; }
+
+#carouselButton {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 5; }
+
+#reserveModal .modal-header {
+  background-color: #17A2B8;
+  color: white; }
+
+#loginModal .modal-header {
+  background-color: #901CAD;
+  color: white; }
